Java 9 Compatibility Update
Sun's BASE64Encoder/Decoder to java.util.Base64 Encoder/Decoder